--- a/fe/package.json
+++ b/fe/package.json
@@ -3,21 +3,22 @@
 	"private": true,
 	"version": "0.0.0",
 	"engine": {
-        	"node": "19.4.0",
-           	"pnpm": "7.25.0"
+		"node": "19.4.0",
+		"pnpm": "7.25.0"
 	},
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
+		"dev": "NODE_ENV=development vite",
+		"build:dev": "NODE_ENV=development vite build",
+		"build:prod": "NODE_ENV=production vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"jotai": "^1.13.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
-		"react-router-dom": "^6.6.1",
-		"zustand": "^4.3.2"
+		"react-router-dom": "^6.6.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.26",
