[FIX] replace access token algorithm RS256 to default SH256  with secret + align env vars

--- a/be/config/env.env
+++ b/be/config/env.env
@@ -4,7 +4,6 @@ MONGO_DB_URI=
 DB=
 TABLE_URL=
 TABLE_USER=
-ACCESS_TOKEN_KEY_PRIVATE=
-ACCESS_TOKEN_KEY_PUBLIC=
+ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_KEY_PRIVATE=
 REFRESH_TOKEN_KEY_PUBLIC=
