[FIX] package name [ADD] script to build backend frontend and deploy to deta from be

--- a/be/package.json
+++ b/be/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "be",
+  "name": "shurlBE",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,6 +11,9 @@
   "scripts": {
     "dev": " env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node --watch app.js",
     "prod": " env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node app.js",
+    "build:fe": "cd ./../fe && pnpm run build:prod && cd ./../be",
+    "build:be": "rm -rf $(find ./../deta_micro/ -maxdepth 1 -name '*' ! -name '.deta' ! -name '.' ! -name '..' ! -name 'deta_micro') && mkdir ./../deta_micro/fe && cp -r ./../fe/dist ./../deta_micro/fe/dist && node ./../script_detash.js",
+    "deploy:deta": "pnpm run build:fe && pnpm run build:be && cd ./../deta_micro && deta update -e config/.env.detash && deta deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
