--- a/be/package.json
+++ b/be/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "deta": "^1.1.0",
     "express": "^4.18.2",
