--- a/be/package.json
+++ b/be/package.json
@@ -26,6 +26,7 @@
     "deta": "^1.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "morgan": "^1.10.0",
