[IMPL] mail service + activateUser page for sign up

--- a/be/config/env.env
+++ b/be/config/env.env
@@ -8,3 +8,8 @@ TABLE_USER=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_KEY_PRIVATE=
 REFRESH_TOKEN_KEY_PUBLIC=
+MAIL_EMAIL_SENDER=
+MAIL_CLIENT_ID=
+MAIL_CLIENT_SECRET=
+MAIL_OAUTH_URL=
+MAIL_REFRESH_TOKEN=
