--- a/be/package.json
+++ b/be/package.json
@@ -9,8 +9,8 @@
     "pnpm": "7.25.0"
   },
   "scripts": {
-    "dev": " env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node --watch app.js",
-    "prod": " env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node app.js",
+    "dev": "env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node --watch app.js",
+    "prod": "env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node app.js",
     "build:fe": "cd ./../fe && pnpm run build:prod && rm -rf $(find ./../deta_micro/fe) && mkdir ./../deta_micro/fe && cp -r ./../fe/dist ./../deta_micro/fe/dist && cd ./../be",
     "build:be": "rm -rf $(find ./../deta_micro/ -maxdepth 1 -name '*' ! -name '.deta' ! -name '.' ! -name '..' ! -name 'deta_micro' ! -name 'fe') && node ./../script_detash.js",
     "deploy:deta": "pnpm run build:fe && pnpm run build:be && cd ./../deta_micro && deta update -e config/.env.detash && deta deploy",
@@ -26,10 +26,12 @@
     "deta": "^1.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "googleapis": "^110.0.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "qrcode": "^1.5.1",
     "swagger-ui-express": "^4.6.0"
   }
