[FIX] rework for new deta space

--- a/be/package.json
+++ b/be/package.json
@@ -15,6 +15,7 @@
     "build:be": "rm -rf $(find ./../deta_micro/ -maxdepth 1 -name '*' ! -name '.deta' ! -name '.' ! -name '..' ! -name 'deta_micro' ! -name 'fe') && node ./../script_detash.js",
     "start": "pnpm run build:fe && pnpm run dev",
     "deploy:deta": "pnpm run build:fe && pnpm run build:be && cd ./../deta_micro && deta update -e config/.env.detash && deta deploy",
+    "space:push": "pnpm run build:fe && pnpm run build:be && cd ./../ && rm -rf ./deta_micro/config && space push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
