--- a/be/package.json
+++ b/be/package.json
@@ -13,9 +13,11 @@
     "dev:debug": "env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node --inspect --watch app.js",
     "prod": "env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node app.js",
     "build:fe": "cd ./../fe && pnpm run build:prod && rm -rf $(find ./../deta_micro/fe) && mkdir ./../deta_micro/fe && cp -r ./../fe/dist ./../deta_micro/fe/dist && cd ./../be",
-    "build:be": "rm -rf $(find ./../deta_micro/ -maxdepth 1 -name '*' ! -name '.deta' ! -name '.' ! -name '..' ! -name 'deta_micro' ! -name 'fe') && node ./../script_detash.js",
+    "build:fe:space": "cd ./../fe && pnpm run build:prod && rm -rf $(find ./../deploy/client) && mkdir ./../deploy/client && cp -R ./../fe/dist/* ./../deploy/client && cd ./../be",
+    "build:be:space": "cp -R ./* ./../deploy",
     "start": "pnpm run build:fe && pnpm run dev",
     "deploy:deta": "pnpm run build:fe && pnpm run build:be && cd ./../deta_micro && deta update -e config/.env.detash && deta deploy",
+    "space:deploy": "pnpm run build:fe:space && pnpm run build:be:space && cd ../ && rm -rf ./deploy/config && rm -rf ./deploy/node_modules && space push",
     "space:push": "pnpm run build:fe && pnpm run build:be && cd ./../ && rm -rf ./deta_micro/config && space push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
