--- a/be/package.json
+++ b/be/package.json
@@ -14,11 +14,11 @@
 		"prod": "env $(cat ./config/.env.dev | grep -v \\\"#\\\" | xargs) node app.js",
 		"build-fe": "cd ./../fe && pnpm run build:prod && rm -rf $(find ./../deploy) && mkdir ./../deploy && cp -r ./../fe/dist ./../deploy/client && cd ./../be",
 		"build-fe-space": "cd ./../fe && pnpm run build:prod && rm -rf $(find ./../deploy/client) && mkdir ./../deploy/client && cp -R ./../fe/dist/* ./../deploy/client && cd ./../be",
-		"build-be-space": "rm -rf $(find ./../deploy/* ! -name \"client\") && cp -R ./* ./../deploy",
+		"build-be-space": "rm -rf $(find ./../deploy/* -not -path \"*/client/*\" -not -path \"*/client\") && cp -R ./* ./../deploy && rm -rf ./../deploy/config && rm -rf ./../deploy/node_modules",
 		"start": "pnpm run build-fe && pnpm run dev",
 		"deta-deploy": "pnpm run build-fe && pnpm run build-be && cd ./../deploy && deta update -e config/.env.detash && deta deploy",
-		"space-push": "pnpm run build-fe-space && pnpm run build-be-space && cd ../ && rm -rf ./deploy/config && rm -rf ./deploy/node_modules && node ./scripts/spacefile_edit.js && space push && node ./scripts/spacefile_reset.js",
-		"space-push-retry": "cd .. && node ./scripts/spacefile_edit.js && space push && node ./scripts/spacefile_reset.js",
+		"prespace-push": "pnpm run build-fe-space && pnpm run build-be-space",
+		"space-push": "cd .. && node ./scripts/spacefile_edit.js && space push && node ./scripts/spacefile_reset.js",
 		"update-env": "cp -r ./config/. ./../../shURL-env/ && cd ./../../shURL-env && git add . && git -c user.name=\"nDriaDev\" -c user.email=\"andreacosentino.work@gmail.com\" commit -m \"[UPDATE] env files\" && git push origin main --force && cd ../shURL/be"
 	},
 	"keywords": [],
