[FIX] gmail configuration

--- a/be/config/.env.local
+++ b/be/config/.env.local
@@ -9,8 +9,16 @@ TABLE_USER=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_KEY_PRIVATE=
 REFRESH_TOKEN_KEY_PUBLIC=
-MAIL_EMAIL_SENDER=
 MAIL_CLIENT_ID=
 MAIL_CLIENT_SECRET=
-MAIL_OAUTH_URL=
+MAIL_ACCESS_TOKEN=
 MAIL_REFRESH_TOKEN=
+MAIL_PROJECT_ID=
+MAIL_AUTH_URI=
+MAIL_TOKEN_URI=
+MAIL_REDIRECT_URI=
+MAIL_AUTH_PROVIDER_X509_CERT_URL=
+MAIL_TOKEN_EXPIRY_DATE=
+MAIL_TOKEN_SCOPE=
+MAIL_TOKEN_TYPE=
+
