[FIX] env var name

--- a/be/config/.env.local
+++ b/be/config/.env.local
@@ -4,7 +4,7 @@ COLLECTION_KEY=
 MONGO_DB_URI=
 DB=
 TABLE_URL=
-TABLE_URL_TEMPORARY=
+TABLE_TEMPORARY_URL=
 TABLE_USER=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_KEY_PRIVATE=
